--- a/css/agency.css
+++ b/css/agency.css
@@ -217,7 +217,8 @@ header.masthead .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header.masthead .intro-text {
-    padding-top: 550px;
+    padding-left: 250px;
+    padding-top: 450px;
     padding-bottom: 200px;
   }
   header.masthead .intro-text .intro-lead-in {
