--- a/css/agency.css
+++ b/css/agency.css
@@ -242,6 +242,7 @@ header.masthead .intro-text .intro-heading {
 .service-heading {
   margin: 15px 0;
   text-transform: none;
+  text-align: left;
 }
 
 #portfolio .portfolio-item {
