--- a/css/agency.css
+++ b/css/agency.css
@@ -242,6 +242,10 @@ header.masthead .intro-text .intro-heading {
 .service-heading {
   margin: 15px 0;
   text-transform: none;
+}
+.service-heading-left {
+  margin: 15px 0;
+  text-transform: none;
   text-align: left;
 }
 
